concord_macros/tests/trybuild/fail/codegen_contract/reserved_nocontent_request_invalid.rs
use concord_macros::api;

api! {
    client ReservedNoContentRequestInvalidApi { base "https://example.com" }

    POST Create(body: NoContent)
        path ["create"]
        -> Json<()>
}

fn main() {}
